[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Main.gd" type="Script" id=1]

[node name="Main" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="MenuButtons" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="Button" parent="Panel/MenuButtons"]
margin_top = 494.0
margin_right = 1920.0
margin_bottom = 514.0
text = "New Game"

[node name="Host Game" type="Button" parent="Panel/MenuButtons"]
margin_top = 518.0
margin_right = 1920.0
margin_bottom = 538.0
text = "Host Game"

[node name="Join Game" type="Button" parent="Panel/MenuButtons"]
margin_top = 542.0
margin_right = 1920.0
margin_bottom = 562.0
text = "Join Game"

[node name="Exit" type="Button" parent="Panel/MenuButtons"]
margin_top = 566.0
margin_right = 1920.0
margin_bottom = 586.0
text = "Exit"
[connection signal="pressed" from="Panel/MenuButtons/Host Game" to="." method="_on_Host_Game_pressed"]
[connection signal="pressed" from="Panel/MenuButtons/Join Game" to="." method="_on_Join_Game_pressed"]
[connection signal="pressed" from="Panel/MenuButtons/Exit" to="." method="_on_Exit_pressed"]
